--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -1,15 +1,173 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invoice Dashboard</title>
+    <title>Invoice Generation</title>
+
+    <!-- Bootstrap CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Dashboard CSS CDN -->
+    <link rel="stylesheet" href="resources/css/dashboard.css">
 
 </head>
 
 <body>
-    
+
+    <div id="app" class="container-fluid p-0 m-0">
+        <div class="side-menu" style="width: 80px;">
+            <div class="nav-header mb-4">
+                <a href="#">
+                    <img src="resources/images/TH logo@2x.png" alt="Taskhops Full Logo" class="taskhops-full-logo"
+                        style="width: 100%; display: none;">
+                    <img src="resources/images/Logo.png" alt="Taskhops Logo" class="taskhops-small-logo"
+                        style="width: 100%; display: block;">
+                </a>
+            </div>
+            <div class="nav-body">
+                <p class="navigation-text" style="display: none;">NAVIGATION</p>
+                <ul class="p-0 my-4">
+                    <li style="padding-left: 2px;" title="Dashboard">
+                        <a href="#" class="flex gap-2 justify-content-start">
+                            <iconify-icon icon="material-symbols:dashboard-outline"
+                                style="font-size: 20px; margin-left: -2px;">
+                            </iconify-icon>
+                        </a>
+                    </li>
+                    <li title="Create Invoice">
+                        <a href="#" class="flex gap-2 justify-content-start">
+                            <iconify-icon icon="carbon:document" style="font-size: 20px;"></iconify-icon>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="main" style="margin-left: 80px;">
+            <div class="main-header flex">
+                <button class="expand-button" style="display: none;" v-on:click="expandMenu()">
+                    <iconify-icon icon="charm:menu-hamburger"></iconify-icon>
+                </button>
+                <h1>Sai Soundar Agency</h1>
+                <div class="profile-logout">
+
+                </div>
+            </div>
+            <div class="main-body">
+                <div class="create-div">
+                    <div class="flex gap-2 justify-content-start">
+                        <iconify-icon icon="material-symbols:dashboard-outline" style="font-size: 20px;">
+                        </iconify-icon>
+                        <span class="fs-6">Invoice Dashboard</span>
+                    </div>
+                </div>
+                <div class="card position-relative border-0 rounded-0">
+                    <div class="table-card scroll-bar">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>S.No</th>
+                                    <th>Date</th>
+                                    <th>Head Name</th>
+                                    <th>Address</th>
+                                    <th>PinCode</th>
+                                    <th>GSTIN</th>
+                                    <th>Place Of Supply</th>
+                                    <th>R.O.No</th>
+                                    <th>R.O.Date</th>
+                                    <th>Product</th>
+                                    <th>Key No</th>
+                                    <th>Caption</th>
+                                    <th>Size</th>
+                                    <th>Area</th>
+                                    <th>Page Position</th>
+                                    <th>Rate Per Sqcm</th>
+                                    <th>Total Amount</th>
+                                    <th>Discount</th>
+                                    <th>CGST</th>
+                                    <th>Net Amount</th>
+                                    <th class="flex position-absolute px-3" 
+                                        style="width:100px;height:73px;right:0px;background-color: var(--primary-color);">Add</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="(row, index) in paginatedData" :key="index">
+                                    <td>{{ row.sNo }}</td>
+                                    <td>{{ row.date }}</td>
+                                    <td>{{ row.headName }}</td>
+                                    <td>{{ row.address }}</td>
+                                    <td>{{ row.pinCode }}</td>
+                                    <td>{{ row.gstIn }}</td>
+                                    <td>{{ row.placeOfSupply }}</td>
+                                    <td>{{ row.roNo }}</td>
+                                    <td>{{ row.roDate }}</td>
+                                    <td>{{ row.productName }}</td>
+                                    <td>{{ row.keyNo }}</td>
+                                    <td>{{ row.captionName }}</td>
+                                    <td>{{ row.size }}</td>
+                                    <td>{{ row.areaName }}</td>
+                                    <td>{{ row.pagePosition }}</td>
+                                    <td>{{ row.ratePerSqcm }}</td>
+                                    <td>{{ row.totalAmount }}</td>
+                                    <td>{{ row.discount }}</td>
+                                    <td>{{ row.gst }}</td>
+                                    <td>{{ row.netAmount }}</td>
+                                    <td class="flex position-absolute bg-white px-3"
+                                        style="width:100px;height:62px;right:0px;">
+                                        <button class="btn-view flex">
+                                            <iconify-icon icon="fluent:add-12-filled"></iconify-icon>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="pagination flex mt-4">
+                    <button title="First Page" class="first-page flex" v-on:click="goToPage(1)"
+                        :disabled="currentPage === 1">
+                        <iconify-icon icon="material-symbols:first-page"></iconify-icon>
+                    </button>
+                    <button title="Previous Page" class="previous-page flex" v-on:click="prevPage"
+                        :disabled="currentPage === 1">
+                        <iconify-icon icon="fe:arrow-left"></iconify-icon>
+                    </button>
+                    <button :title="page" class="page-number flex" v-for="page in visiblePages"
+                        v-on:click="goToPage(page)" :disabled="page === currentPage"
+                        :class="{ 'active-page': page === currentPage }">
+                        {{page}}
+                    </button>
+                    <button title="Next Page" class="next-page flex" v-on:click="nextPage"
+                        :disabled="currentPage === totalPages">
+                        <iconify-icon icon="fe:arrow-right"></iconify-icon>
+                    </button>
+                    <button title="Last Page" class="last-page flex" v-on:click="goToPage(totalPages)"
+                        :disabled="currentPage === totalPages">
+                        <iconify-icon icon="material-symbols:last-page"></iconify-icon>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Jquery JS CDN -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <!-- Iconify Icon JS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+
+    <!-- Bootstrap JS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Vue JS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+
+    <!-- Dashboard JS CDN -->
+    <script src="resources/js/dashboard.js"></script>
+
 </body>
 
 </html>
