--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -9,6 +9,12 @@
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Date Range Picker CSS CDN -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
+    <!-- Select2 CSS CDN -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+
     <!-- Dashboard CSS CDN -->
     <link rel="stylesheet" href="resources/css/dashboard.css">
 
@@ -62,6 +68,17 @@
                         <span class="fs-6">Invoice Dashboard</span>
                     </div>
                 </div>
+                <div class="filter-div">
+                    <input type="text" name="daterange" id="dateRangePicker" />
+                    <select id="single" class="js-states form-control" style="width: 200px;">
+                        <option>a</option>
+                        <option>b</option>
+                        <option>c</option>
+                        <option>d</option>
+                    </select>
+                    <input type="text">
+                    <button>PDF</button>
+                </div>
                 <div class="card position-relative border-0 rounded-0">
                     <div class="table-card scroll-bar">
                         <table>
@@ -87,8 +104,10 @@
                                     <th>Discount</th>
                                     <th>CGST</th>
                                     <th>Net Amount</th>
-                                    <th class="flex position-absolute px-3" 
-                                        style="width:100px;height:73px;right:0px;background-color: var(--primary-color);">Add</th>
+                                    <th class="flex position-sticky"
+                                        style="width:100px;height:73px;right:-10px;background-color: var(--primary-color);">
+                                        Add
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -113,9 +132,9 @@
                                     <td>{{ row.discount }}</td>
                                     <td>{{ row.gst }}</td>
                                     <td>{{ row.netAmount }}</td>
-                                    <td class="flex position-absolute bg-white px-3"
-                                        style="width:100px;height:62px;right:0px;">
-                                        <button class="btn-view flex">
+                                    <td class="flex position-sticky bg-white"
+                                        style="width:100px;height:62px;right:-10px;">
+                                        <button class="btn-view flex" title="Add">
                                             <iconify-icon icon="fluent:add-12-filled"></iconify-icon>
                                         </button>
                                     </td>
@@ -151,10 +170,8 @@
         </div>
     </div>
 
-
     <!-- Jquery JS CDN -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <!-- Iconify Icon JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
@@ -162,8 +179,17 @@
     <!-- Bootstrap JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Select 2 JS CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+
     <!-- Vue JS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+
+    <!-- Moment JS CDN -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+
+    <!-- Date Range Picker JS CDN -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
     <!-- Dashboard JS CDN -->
     <script src="resources/js/dashboard.js"></script>
